# useinsider_test_task

./: .gitignore  README.md  config.example.json  pyproject.toml
pages/: careers.py  homePage.py
tests/: conftest.py  test_insider.py
