[tool.poetry]
name = "useinsider-project"
version = "0.1.0"
description = ""
authors = ["Murad Qaniyev <murad.qaniyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
